--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
      
      <h2>Projects</h2>
      <ul style="list-style-type:square">
+	 <li>2025.01 - 2026.12, <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2429506">Safety-Directed Abstraction, Verification and Correction of Learning-Enabled Cyber-Physical Systems</a> (PI), funded by NSF, $299,998</li>
 	 <li>2019.08 - 2022.03, Analysis and Abstraction of Hybrid Systems (PI), funded by Air Force Research Laboratory, $83,158.</li>
      <li>2017.05 - 2017.08, Summer of Innovation (co-PI), funded by Air Force Research Laboratory, $35,000 (my share).</li>
      </ul>
