--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     <br>
      <br>
      <h2>Committee member</h2>
-     ASP-DAC 2025, VMCAI 2025, ICCD 2024, MEMOCODE 2024, ARCH 2024, ATVA 2024, DAC 2024, ASP-DAC 2024, ARCH 2023, AAAI 2023, ARCH 2022, NSV 2022, ARCH 2021, ARCH 2020, EMSOFT 2019, ARCH 2019, ARCH 2018, EMSOFT WiP 2018, ARCH 2017, SNR 2017, CAV 2016 AEC, HSCC RE 2016, ARCH 2016, ARCH 2015, HSCC RE 2014.
+     DAC 2025, ASP-DAC 2025, VMCAI 2025, ICCD 2024, MEMOCODE 2024, ARCH 2024, ATVA 2024, DAC 2024, ASP-DAC 2024, ARCH 2023, AAAI 2023, ARCH 2022, NSV 2022, ARCH 2021, ARCH 2020, EMSOFT 2019, ARCH 2019, ARCH 2018, EMSOFT WiP 2018, ARCH 2017, SNR 2017, CAV 2016 AEC, HSCC RE 2016, ARCH 2016, ARCH 2015, HSCC RE 2014.
      <br>
      <br>
      
