--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <h3>Email: &nbsp; <i>chenxin AT unm DOT edu</i></h3>
              </td>
              <td>
-                 <img src="images/chen.png" alt="xinchen" width='320'>
+                 <img src="images/Chen.jpg" alt="xinchen" width='480'>
              </td>
          </tr>
     </table>
