--- a/index.html
+++ b/index.html
@@ -122,6 +122,8 @@ Machine Learning and Optimization Techniques for Automotive Cyber-Physical Syste
 	     
      <h3>Peer-Reviewed Conference and Journal Papers</h3>
      <dl>
+	 <dt style="color:darkred;font-weight:bold">[VMCAI'25]</dt>
+	 <dd>Junfeng Yang, Min Zhang, Xin Chen, Qin Li. <br> <font color="blue"><i> Formal Verification of Probabilistic Deep Reinforcement Learning Policies with Abstract Training. </i></font> <br> In the International Conference on Verification, Model Checking, and Abstract Interpretation (VMCAI). To Appear.</dd>
 	 <dt style="color:darkred;font-weight:bold">[RTSS'24]</dt>
 	 <dd>Mengyu Liu, Pengyuan Lu, Xin Chen, Oleg Sokolsky, Insup Lee and Fanxin Kong. <br> <font color="blue"><i> Deadline-Safe Reach-Avoid Control Synthesis for Cyber-Physical Systems with Reinforcement Learning. </i></font> <br> In Real Time Systems Symposium (RTSS). To Appear.</dd>
 	 <dt style="color:darkred;font-weight:bold">[RTAS'24]</dt>
