--- a/index.html
+++ b/index.html
@@ -122,6 +122,8 @@ Machine Learning and Optimization Techniques for Automotive Cyber-Physical Syste
 	     
      <h3>Peer-Reviewed Conference and Journal Papers</h3>
      <dl>
+	 <dt style="color:darkred;font-weight:bold">[RTAS'25]</dt>
+	 <dd>Weizhe Xu, Xin Chen, Matthew Anderson, Steven Drager, Fanxin Kong. <br> <font color="blue"><i> Recovery-Guaranteed Sensor Attack Detection for Cyber-Physical Systems. </i></font> <br> In IEEE Real-Time and Embedded Technology and Applications Symposium (RTAS). To Appear.</dd>
 	 <dt style="color:darkred;font-weight:bold">[VMCAI'25]</dt>
 	 <dd>Junfeng Yang, Min Zhang, Xin Chen, Qin Li. <br> <font color="blue"><i> Formal Verification of Probabilistic Deep Reinforcement Learning Policies with Abstract Training. </i></font> <br> In the International Conference on Verification, Model Checking, and Abstract Interpretation (VMCAI). To Appear.</dd>
 	 <dt style="color:darkred;font-weight:bold">[RTSS'24]</dt>
