--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     <br>
      <br>
      <h2>Committee member</h2>
-     DAC 2025, ASP-DAC 2025, VMCAI 2025, ICCD 2024, MEMOCODE 2024, ARCH 2024, ATVA 2024, DAC 2024, ASP-DAC 2024, ARCH 2023, AAAI 2023, ARCH 2022, NSV 2022, ARCH 2021, ARCH 2020, EMSOFT 2019, ARCH 2019, ARCH 2018, EMSOFT WiP 2018, ARCH 2017, SNR 2017, CAV 2016 AEC, HSCC RE 2016, ARCH 2016, ARCH 2015, HSCC RE 2014.
+     ASP-DAC 26, ICCD 25, DAC 2025, ASP-DAC 2025, VMCAI 2025, ICCD 2024, MEMOCODE 2024, ARCH 2024, ATVA 2024, DAC 2024, ASP-DAC 2024, ARCH 2023, AAAI 2023, ARCH 2022, NSV 2022, ARCH 2021, ARCH 2020, EMSOFT 2019, ARCH 2019, ARCH 2018, EMSOFT WiP 2018, ARCH 2017, SNR 2017, CAV 2016 AEC, HSCC RE 2016, ARCH 2016, ARCH 2015, HSCC RE 2014.
      <br>
      <br>
      
@@ -122,12 +122,14 @@ Machine Learning and Optimization Techniques for Automotive Cyber-Physical Syste
 	     
      <h3>Peer-Reviewed Conference and Journal Papers</h3>
      <dl>
+     <dt style="color:darkred;font-weight:bold">[ASP-DAC'26]</dt>
+	 <dd>Xin Chen. <br> <font color="blue"><i> Flowmap Overapproximation for Linear Time-Varying Stochastic Systems. </i></font> <br> In Asia and South Pacific Design Automation Conference (ASP-DAC). 2026. To Appear.</dd>
 	 <dt style="color:darkred;font-weight:bold">[RTAS'25]</dt>
-	 <dd>Weizhe Xu, Xin Chen, Matthew Anderson, Steven Drager, Fanxin Kong. <br> <font color="blue"><i> Recovery-Guaranteed Sensor Attack Detection for Cyber-Physical Systems. </i></font> <br> In IEEE Real-Time and Embedded Technology and Applications Symposium (RTAS). To Appear.</dd>
+	 <dd>Weizhe Xu, Xin Chen, Matthew Anderson, Steven Drager, Fanxin Kong. <br> <font color="blue"><i> Recovery-Guaranteed Sensor Attack Detection for Cyber-Physical Systems. </i></font> <br> In IEEE Real-Time and Embedded Technology and Applications Symposium (RTAS). pp. 324-336. IEEE, 2025.</dd>
 	 <dt style="color:darkred;font-weight:bold">[VMCAI'25]</dt>
-	 <dd>Junfeng Yang, Min Zhang, Xin Chen, Qin Li. <br> <font color="blue"><i> Formal Verification of Probabilistic Deep Reinforcement Learning Policies with Abstract Training. </i></font> <br> In the International Conference on Verification, Model Checking, and Abstract Interpretation (VMCAI). To Appear.</dd>
+	 <dd>Junfeng Yang, Min Zhang, Xin Chen, Qin Li. <br> <font color="blue"><i> Formal Verification of Probabilistic Deep Reinforcement Learning Policies with Abstract Training. </i></font> <br> In the International Conference on Verification, Model Checking, and Abstract Interpretation (VMCAI). pp. 125--147, LNCS, Vol. 15529, 2025.</dd>
 	 <dt style="color:darkred;font-weight:bold">[RTSS'24]</dt>
-	 <dd>Mengyu Liu, Pengyuan Lu, Xin Chen, Oleg Sokolsky, Insup Lee and Fanxin Kong. <br> <font color="blue"><i> Deadline-Safe Reach-Avoid Control Synthesis for Cyber-Physical Systems with Reinforcement Learning. </i></font> <br> In Real Time Systems Symposium (RTSS). To Appear.</dd>
+	 <dd>Mengyu Liu, Pengyuan Lu, Xin Chen, Oleg Sokolsky, Insup Lee and Fanxin Kong. <br> <font color="blue"><i> Deadline-Safe Reach-Avoid Control Synthesis for Cyber-Physical Systems with Reinforcement Learning. </i></font> <br> In Real Time Systems Symposium (RTSS). pp. 96-108. IEEE, 2024.</dd>
 	 <dt style="color:darkred;font-weight:bold">[RTAS'24]</dt>
          <dd>Lin Zhang, Luis Burbano, Xin Chen, Alvaro A. Cardenas, Steve Drager, Matthew Anderson, Fanxin Kong. <br> <font color="blue"><i> Fast Attack Recovery for Stochastic Cyber-Physical Systems. </i></font> <br> In IEEE Real-Time and Embedded Technology and Applications Symposium (RTAS), pp. 280--293. IEEE, 2024.</dd>
 	 <dt style="color:darkred;font-weight:bold">[AAAI'24]</dt>
